<resources>
    <string name="app_name">Bank Sampah Mliriprowo</string>
    <string name="skip">Skip!</string>
    <string name="next">NEXT</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="login">Login</string>
    <string name="user_baru">User baru?</string>
    <string name="register">Register</string>
    <string name="nama">Nama</string>
    <string name="registrasi">Registrasi</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="jangan_khawatir_anda_dapat_membuat_password_baru_lagi_masukkan_email_untuk_melakukan_autentikasi">Jangan Khawatir! Anda dapat membuat password baru lagi. Masukkan email untuk melakukan autentikasi.</string>
    <string name="text_lupa_password">Lupa Password?</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ubah_data_pribadi">Ubah Data Pribadi</string>
    <string name="nama_anda">Nama Anda</string>
    <string name="saldo">Saldo</string>
    <string name="your_saldo">Your Saldo</string>
    <string name="email_anda">Email Anda</string>
    <string name="simpan_data_perubahan">Simpan Data Perubahan</string>
    <string name="ubah_password">Ubah Password?</string>
    <string name="keterangan2">Pastikan password baru yang anda buat dapat cukup aman dan mudah diingat!</string>
    <string name="password_lama">Password Lama</string>
    <string name="password_baru">Password Baru</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="data_pribadi">Data Pribadi</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="logout">logout</string>
    <string name="loading">Loading...</string>
    <string name="daftar_sampah">Daftar Sampah</string>
    <string name="edit_sampah">Edit Sampah</string>
    <string name="nama_sampah">Nama Sampah</string>
    <string name="masukkan_nama_sampah">Masukkan Nama Sampah</string>
    <string name="harga_sampah">Harga Sampah</string>
    <string name="masukkan_harga_sampah">Masukkan harga sampah</string>
    <string name="deskripsi_sampah">Deskripsi Sampah</string>
    <string name="masukkan_deskripsi_sampah">Masukkan deskripsi sampah</string>
    <string name="perbarui_sampah">Perbarui Sampah</string>
    <string name="hapus_sampah">Hapus Sampah</string>
    <string name="tambah_sampah">Tambah Sampah</string>
    <string name="tekan_untuk_memilih_gambar">Tekan untuk memilih gambar</string>
    <string name="tambah">Tambah</string>
    <string name="tambah_jadwal">Tambah Jadwal</string>
    <string name="hari">Hari</string>
    <string name="masukkan_hari">Masukkan hari</string>
    <string name="jenis_sampah">Jenis Sampah</string>
    <string name="masukkan_jenis_sampah">Masukkan jenis sampah</string>
    <string name="harga">Harga:</string>
    <string name="keterangan">Keterangan:</string>
    <string name="description_sampah">description sampah</string>
    <string name="jadwal_pengumpulan_sampah">Jadwal Pengumpulan Sampah</string>
    <string name="custominput">customInput</string>
    <string name="daftar_pengumpulan_sampah">Daftar Pengumpulan Sampah</string>
    <string name="search">Search</string>
    <string name="edit_pengumpulan_sampah">Edit Pengumpulan Sampah</string>
    <string name="anggota">Anggota</string>
    <string name="sampah">Sampah</string>
    <string name="pilih_sampah">Pilih sampah</string>
    <string name="tanggal_setoran">Tanggal Setoran</string>
    <string name="hari_bulan_tahun">hari/bulan/tahun</string>
    <string name="pilih_tanggal">Pilih tanggal</string>
    <string name="berat_pengumpulan">Berat Pengumpulan</string>
    <string name="perbarui_pengumpulan">Perbarui Pengumpulan</string>
    <string name="hapus_pengumpulan">Hapus Pengumpulan</string>
    <string name="pilih_anggota">Pilih anggota</string>
    <string name="masukkan_berat_pengumpulan">Masukkan berat pengumpulan</string>
    <string name="text_user">text user</string>
    <string name="type_sampah">Type sampah</string>
    <string name="price_sampah">Price sampah</string>
    <string name="total_price">Total price</string>
    <string name="tanggal_pengumpulan">Tanggal pengumpulan</string>
    <string name="stock_sampah">Stock Sampah</string>
    <string name="daftar_penarikan_saldo">Daftar Penarikan Saldo</string>
    <string name="edit_penarikan_saldo">Edit Penarikan Saldo</string>
    <string name="tanggal_penarikan">Tanggal Penarikan</string>
    <string name="jumlah_penarikan_saldo">Jumlah Penarikan Saldo</string>
    <string name="masukkan_jumlah_penarikan_saldo">Masukkan jumlah penarikan saldo</string>
    <string name="perbarui_penarikan">Perbarui Penarikan</string>
    <string name="hapus_penarikan">Hapus Penarikan</string>
    <string name="tambah_penarikan_saldo">Tambah Penarikan Saldo</string>
    <string name="cari_berdasarkan_nama_sampah">Cari berdasarkan nama sampah</string>
    <string name="cari_berdasarkan_tanggal_penarikan">Cari berdasarkan tanggal penarikan</string>
    <string name="daftar_penjualan_sampah">Daftar Penjualan Sampah</string>
    <string name="texttotalsampah">textTotalSampah</string>
    <string name="texttotal">textTotal</string>
    <string name="textpenarikan">textPenarikan</string>
    <string name="textpengumpulan">textPengumpulan</string>
    <string name="daftar_anggota">Daftar Anggota</string>
    <string name="cari_berdasarkan_nama">Cari berdasarkan nama</string>
    <string name="total_saldo">Total Saldo:</string>
    <string name="note_kecil">Top anggota adalah 3 anggota teratas dengan jumlah pengumpulan terbanyak. Dimana tiap - tiap anggota tersebut akan diberi penghargaan berupa penambahan saldo setiap bulannya dengan nominal: peringkat 1 (5,000), peringkat 2 (4,000), peringkat 3 (3,000).</string>
    <string name="catatan">Catatan:</string>
    <string name="top_anggota">Top Anggota</string>
    <string name="_0">0</string>
    <string name="mendapatkan_penambahan_saldo_sebesar">Mendapatkan penambahan saldo sebesar:</string>
    <string name="jumlah_pengumpulan">Jumlah Pengumpulan:</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="semua_anggota">Semua Anggota</string>
    <string name="judul_notifikasi">Judul Notifikasi</string>
    <string name="pesan_notifikasi">Pesan Notifikasi</string>
    <string name="message">Message</string>
    <string name="kirim">Kirim</string>
    <string name="cari_berdasarkan_nama_anggota">Cari berdasarkan nama anggota</string>
    <string name="perbarui_anggota">Perbarui Anggota</string>
</resources>