<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".admin.TambahDaftarSampahAdminActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tambah_sampah"
        android:textColor="@color/primary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="@+id/backButton" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backButton"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_close"
        android:tint="@color/dark_Red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imageSampah"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:background="@color/card_background"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton"
        app:riv_corner_radius="8dp" />

    <TextView
        android:id="@+id/textImage"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="visible"
        android:text="@string/tekan_untuk_memilih_gambar"
        android:textColor="@color/secondary_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageSampah"
        app:layout_constraintEnd_toEndOf="@+id/imageSampah"
        app:layout_constraintStart_toStartOf="@+id/imageSampah"
        app:layout_constraintTop_toTopOf="@+id/imageSampah" />

    <TextView
        android:id="@+id/textNamaSampah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:text="@string/nama_sampah"
        android:textColor="@color/primary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageSampah" />

    <EditText
        android:id="@+id/etNameSampah"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:lines="1"
        android:hint="@string/masukkan_nama_sampah"
        android:textColor="@color/primary"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/textNamaSampah"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textHargaSampah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:text="@string/harga_sampah"
        android:textColor="@color/primary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNameSampah" />

    <EditText
        android:id="@+id/etPriceSampah"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:lines="1"
        android:hint="@string/masukkan_harga_sampah"
        android:textColor="@color/primary"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/textHargaSampah"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textDeskripsiSampah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:text="@string/deskripsi_sampah"
        android:textColor="@color/primary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPriceSampah" />

    <EditText
        android:id="@+id/etDesctiptionSampah"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:lines="3"
        android:hint="@string/masukkan_deskripsi_sampah"
        android:textColor="@color/primary"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/textDeskripsiSampah"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnTambah"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_border2"
        android:text="@string/tambah"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>