<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardTopAnggota"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:layout_marginBottom="30dp"
    app:cardBackgroundColor="@color/card_background"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="8dp"
    app:cardElevation="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageUser"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/schedule"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_corner_radius="8dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageUser"
            app:layout_constraintTop_toTopOf="parent" >

            <TextView
                android:id="@+id/typeUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/text_user"
                android:textColor="@color/primary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/jumlah_pengumpulan"
                android:textColor="@color/secondary_text"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/countPengumpulan"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/textpengumpulan"
                android:textColor="@color/second_primary"
                android:textStyle="bold"
                android:textSize="11sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/mendapatkan_penambahan_saldo_sebesar"
                android:textColor="@color/secondary_text"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/saldo"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/_0"
                android:textColor="@color/second_primary"
                android:textStyle="bold"
                android:textSize="11sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>